--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>NYP</module>
         <module>BestBuy</module>
         <module>MsNbc</module>
+        <module>NYP1</module>
     </modules>
     <dependencyManagement>
         <dependencies>
